add cJSON into rawReadPostData for implementing cmd dispatch and track via application/json
FossilOrigin-Name: 7946711abf465590ec8e76dc1dcd312688b104a7e9f2b067a171d2b1961dd8c8

--- a/src/unix/Makefile.in
+++ b/src/unix/Makefile.in
@@ -54,7 +54,8 @@ web_OBJECTS = args.o \
 	varchannel.o \
 	modwebsh_cgi.o \
 	request_cgi.o \
-	response_cgi.o
+	response_cgi.o \
+	cJSON.o
 
 web_OBJECTS_ap = apchannel.o \
 	interpool.o \
