--- a/src/unix/Makefile
+++ b/src/unix/Makefile
@@ -54,7 +54,8 @@ web_OBJECTS = args.o \
 	varchannel.o \
 	modwebsh_cgi.o \
 	request_cgi.o \
-	response_cgi.o
+	response_cgi.o \
+	cJSON.o
 
 web_OBJECTS_ap = apchannel.o \
 	interpool.o \
@@ -66,7 +67,7 @@ web_OBJECTS_ap = apchannel.o \
 
 OBJECTS = $(web_OBJECTS)
 
-web_LIB_FILE = libwebsh3.6.0b5.dylib
+web_LIB_FILE = libwebsh3.6.0b5.so
 $(web_LIB_FILE)_OBJECTS = $(web_OBJECTS)
 
 # =============================================================================
@@ -75,10 +76,10 @@ $(web_LIB_FILE)_OBJECTS = $(web_OBJECTS)
 
 GENERIC_HDRS=
 
-SHELL = /bin/sh
+SHELL = /bin/bash
 
 srcdir = .
-prefix = /usr/local/websh3
+prefix = /usr/local
 exec_prefix = ${prefix}
 
 bindir = ${exec_prefix}/bin
@@ -92,8 +93,8 @@ PACKAGE = web
 VERSION = 3.6.0b5
 CC = cc
 CFLAGS_DEBUG = -g
-CFLAGS_DEFAULT = -Os
-CFLAGS_OPTIMIZE = -Os
+CFLAGS_DEFAULT = -O2
+CFLAGS_OPTIMIZE = -O2
 CFLAGS_WARNING = -Wall
 CLEANFILES = *pure* *.cov* ../tests/webtest.log ../tests/*.dat
 EXEEXT = 
@@ -103,8 +104,8 @@ MAKE_SHARED_LIB = ${SHLIB_LD} -o $@ $($@_OBJECTS) ${SHLIB_LDFLAGS} ${SHLIB_LD_LI
 MAKE_STATIC_LIB = ${STLIB_LD} $@ $($@_OBJECTS)
 OBJEXT = o
 RANLIB = :
-SHLIB_CFLAGS = -fno-common
-SHLIB_LD = ${CC} -dynamiclib ${CFLAGS} ${LDFLAGS} -Wl,-single_module
+SHLIB_CFLAGS = -fPIC
+SHLIB_LD = ${CC} ${CFLAGS} ${LDFLAGS} -shared
 Platform=$(shell uname -s)
 ifeq ($(Platform),Darwin)
 SHLIB_LD_CURRENT = $(CC) -bundle -bundle_loader $(HTTPD_BIN) $(LDFLAGS)
@@ -114,40 +115,40 @@ SHLIB_LD_CURRENT = $(SHLIB_LD) $(TCL_LD_FLAGS)
 LDLIBPATHVAR = LD_LIBRARY_PATH
 endif
 SHLIB_LDFLAGS = 
-SHLIB_LD_LIBS = -L/Library/Frameworks/Tcl.framework/Versions/8.6 -ltclstub8.6
+SHLIB_LD_LIBS = -L/usr/local/lib -ltclstub8.6
 STLIB_LD = ${AR} cr
-APRU_LIBS =  -L"/usr/local/apache2/lib" -lapr-1
-TCL_BIN_DIR = /Library/Frameworks/Tcl.framework
-TCL_DEFS = -DPACKAGE_NAME=\"tcl\" -DPACKAGE_TARNAME=\"tcl\" -DPACKAGE_VERSION=\"8.6\" -DPACKAGE_STRING=\"tcl\ 8.6\" -DPACKAGE_BUGREPORT=\"\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DNO_VALUES_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DHAVE_PTHREAD_ATTR_SETSTACKSIZE=1 -DHAVE_PTHREAD_ATFORK=1 -DTCL_THREADS=1 -DTCL_CFGVAL_ENCODING=\"iso8859-1\" -DHAVE_ZLIB=1 -DMODULE_SCOPE=extern\ __attribute__\(\(__visibility__\(\"hidden\"\)\)\) -DHAVE_HIDDEN=1 -DMAC_OSX_TCL=1 -DHAVE_COREFOUNDATION=1 -DHAVE_CAST_TO_UNION=1 -DTCL_SHLIB_EXT=\".dylib\" -DNDEBUG=1 -DTCL_CFG_OPTIMIZED=1 -DTCL_TOMMATH=1 -DMP_PREC=4 -DTCL_WIDE_INT_IS_LONG=1 -DHAVE_GETCWD=1 -DHAVE_MKSTEMP=1 -DHAVE_OPENDIR=1 -DHAVE_STRTOL=1 -DHAVE_WAITPID=1 -DHAVE_GETNAMEINFO=1 -DHAVE_GETADDRINFO=1 -DHAVE_FREEADDRINFO=1 -DHAVE_GAI_STRERROR=1 -DHAVE_STRUCT_ADDRINFO=1 -DHAVE_STRUCT_IN6_ADDR=1 -DHAVE_STRUCT_SOCKADDR_IN6=1 -DHAVE_STRUCT_SOCKADDR_STORAGE=1 -DHAVE_GETPWUID_R_5=1 -DHAVE_GETPWUID_R=1 -DHAVE_GETPWNAM_R_5=1 -DHAVE_GETPWNAM_R=1 -DHAVE_GETGRGID_R_5=1 -DHAVE_GETGRGID_R=1 -DHAVE_GETGRNAM_R_5=1 -DHAVE_GETGRNAM_R=1 -DHAVE_MTSAFE_GETHOSTBYNAME=1 -DHAVE_MTSAFE_GETHOSTBYADDR=1 -DHAVE_TERMIOS_H=1 -DHAVE_SYS_IOCTL_H=1 -DHAVE_SYS_TIME_H=1 -DTIME_WITH_SYS_TIME=1 -DHAVE_GMTIME_R=1 -DHAVE_LOCALTIME_R=1 -DHAVE_MKTIME=1 -DHAVE_TM_GMTOFF=1 -DHAVE_TIMEZONE_VAR=1 -DHAVE_STRUCT_STAT_ST_BLOCKS=1 -DHAVE_STRUCT_STAT_ST_BLKSIZE=1 -DHAVE_BLKCNT_T=1 -DHAVE_INTPTR_T=1 -DHAVE_UINTPTR_T=1 -DHAVE_SIGNED_CHAR=1 -DHAVE_LANGINFO=1 -DHAVE_CHFLAGS=1 -DHAVE_MKSTEMPS=1 -DHAVE_GETATTRLIST=1 -DHAVE_COPYFILE_H=1 -DHAVE_COPYFILE=1 -DHAVE_LIBKERN_OSATOMIC_H=1 -DHAVE_OSSPINLOCKLOCK=1 -DUSE_VFORK=1 -DTCL_DEFAULT_ENCODING=\"utf-8\" -DTCL_LOAD_FROM_MEMORY=1 -DTCL_WIDE_CLICKS=1 -DHAVE_AVAILABILITYMACROS_H=1 -DHAVE_WEAK_IMPORT=1 -D_DARWIN_C_SOURCE=1 -DHAVE_FTS=1 -DHAVE_SYS_IOCTL_H=1 -DHAVE_SYS_FILIO_H=1 -DTCL_UNLOAD_DLLS=1 -DUSE_DTRACE=1 -DHAVE_CPUID=1 -DTCL_FRAMEWORK=1 
-TCL_EXTRA_CFLAGS = -arch x86_64 -pipe   -mmacosx-version-min=10.11 
-TCL_LD_FLAGS =  -headerpad_max_install_names -Wl,-search_paths_first 
-TCL_LIBS =  -lz  -lpthread -framework CoreFoundation 
+APRU_LIBS = 
+TCL_BIN_DIR = /usr/local/src/tcl8.6.9/unix
+TCL_DEFS = -DPACKAGE_NAME=\"tcl\" -DPACKAGE_TARNAME=\"tcl\" -DPACKAGE_VERSION=\"8.6\" -DPACKAGE_STRING=\"tcl\ 8.6\" -DPACKAGE_BUGREPORT=\"\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DHAVE_PTHREAD_ATTR_SETSTACKSIZE=1 -DHAVE_PTHREAD_ATFORK=1 -DTCL_THREADS=1 -DTCL_CFGVAL_ENCODING=\"iso8859-1\" -DHAVE_ZLIB=1 -DMODULE_SCOPE=extern\ __attribute__\(\(__visibility__\(\"hidden\"\)\)\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -DTCL_SHLIB_EXT=\".so\" -DNDEBUG=1 -DTCL_CFG_OPTIMIZED=1 -DTCL_TOMMATH=1 -DMP_PREC=4 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DHAVE_GETCWD=1 -DHAVE_MKSTEMP=1 -DHAVE_OPENDIR=1 -DHAVE_STRTOL=1 -DHAVE_WAITPID=1 -DHAVE_GETNAMEINFO=1 -DHAVE_GETADDRINFO=1 -DHAVE_FREEADDRINFO=1 -DHAVE_GAI_STRERROR=1 -DHAVE_STRUCT_ADDRINFO=1 -DHAVE_STRUCT_IN6_ADDR=1 -DHAVE_STRUCT_SOCKADDR_IN6=1 -DHAVE_STRUCT_SOCKADDR_STORAGE=1 -DHAVE_GETPWUID_R_5=1 -DHAVE_GETPWUID_R=1 -DHAVE_GETPWNAM_R_5=1 -DHAVE_GETPWNAM_R=1 -DHAVE_GETGRGID_R_5=1 -DHAVE_GETGRGID_R=1 -DHAVE_GETGRNAM_R_5=1 -DHAVE_GETGRNAM_R=1 -DHAVE_GETHOSTBYNAME_R_6=1 -DHAVE_GETHOSTBYNAME_R=1 -DHAVE_GETHOSTBYADDR_R_8=1 -DHAVE_GETHOSTBYADDR_R=1 -DHAVE_TERMIOS_H=1 -DHAVE_SYS_IOCTL_H=1 -DHAVE_SYS_TIME_H=1 -DTIME_WITH_SYS_TIME=1 -DHAVE_GMTIME_R=1 -DHAVE_LOCALTIME_R=1 -DHAVE_MKTIME=1 -DHAVE_TM_GMTOFF=1 -DHAVE_TIMEZONE_VAR=1 -DHAVE_STRUCT_STAT_ST_BLOCKS=1 -DHAVE_STRUCT_STAT_ST_BLKSIZE=1 -DHAVE_BLKCNT_T=1 -DHAVE_INTPTR_T=1 -DHAVE_UINTPTR_T=1 -DNO_UNION_WAIT=1 -DHAVE_SIGNED_CHAR=1 -DHAVE_LANGINFO=1 -DHAVE_MKSTEMPS=1 -DHAVE_FTS=1 -DHAVE_SYS_IOCTL_H=1 -DTCL_UNLOAD_DLLS=1 -DHAVE_CPUID=1 
+TCL_EXTRA_CFLAGS =  -pipe 
+TCL_LD_FLAGS =  -Wl,--export-dynamic 
+TCL_LIBS = -ldl -lz  -lpthread -lm
 TCL_SHLIB_LD_LIBS = ${LIBS}
-TCL_SRC_DIR = /Users/alex/src/tcl868/tcl8.6.8
+TCL_SRC_DIR = /usr/local/src/tcl8.6.9
 TCL_DBGX = 
 TCL_STUB_LIB_FILE = libtclstub8.6.a
-TCL_STUB_LIB_SPEC = -L/Library/Frameworks/Tcl.framework/Versions/8.6 -ltclstub8.6
-TCL_LIB_SPEC = -F/Library/Frameworks -framework Tcl
+TCL_STUB_LIB_SPEC = -L/usr/local/lib -ltclstub8.6
+TCL_LIB_SPEC = -L/usr/local/lib -ltcl8.6
 TCLSH_PROG = /usr/local/bin/tclsh8.6
-TCL_PACKAGE_PATH = ~/Library/Tcl /Library/Tcl /System/Library/Tcl ~/Library/Frameworks /Library/Frameworks /System/Library/Frameworks
+TCL_PACKAGE_PATH = /usr/local/lib 
 
 # uncomment the following line if you want to enable the
 # Tcl memory and checkmem commands in mod_websh
 #MEM_DEBUG_FLAGS = -DTCL_MEM_DEBUG
 
-SHARED_LIB_SUFFIX = 3.6.0b5.dylib
+SHARED_LIB_SUFFIX = 3.6.0b5.so
 MODULE_LIB_SUFFIX = $(VERSION).so
 UNSHARED_LIB_SUFFIX = 3.6.0b5.a
 
-HTTPD_INCLUDES = -I"/usr/local/apache2/include"
+HTTPD_INCLUDES = -I"/usr/include/apache2" -I"/usr/include/apr-1.0"
 # needed for Darwin (OS X) only
-HTTPD_BIN = /usr/local/apache2/include/../bin/httpd
+HTTPD_BIN = 
 
 AUTOCONF = autoconf
 
 LDFLAGS = $(LDFLAGS_DEFAULT)
 
-INCLUDES = -I"/Library/Frameworks/Tcl.framework/Versions/8.6/Headers" $(HTTPD_INCLUDES)
+INCLUDES = -I"/usr/local/include" $(HTTPD_INCLUDES)
 
 # remove PACKAGE stuff: will cause warnings for Apache >2 and Tcl >=8.5
 FIXED_TCL_DEFS = $(filter-out -DPACKAGE_NAME=% -DPACKAGE_TARNAME=% -DPACKAGE_VERSION=% -DPACKAGE_STRING=% -DPACKAGE_BUGREPORT=% 8.% 9.%, $(TCL_DEFS))
