--- a/src/unix/configure.in
+++ b/src/unix/configure.in
@@ -30,8 +30,8 @@ AC_INIT(../generic/web.c)
 PACKAGE=web
 
 MAJOR_VERSION=3
-MINOR_VERSION=6
-PATCHLEVEL=0b5
+MINOR_VERSION=7
+PATCHLEVEL=0
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${PATCHLEVEL}
 NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}${PATCHLEVEL}
